cache fix, ttl default update, kelly, best odds, swagger, test org
